--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@
 # Set the names of the projects and targets:
 SET(TARGET1 "DG_advection_reaction_estimator")
 SET(TARGET2 "DG_advection_reaction_embedded_estimator")
+SET(TARGET3 "blood-flow-system-1d3d")
 
 # Declare all source files for each target:
 SET(TARGET1_SRC
@@ -40,6 +41,11 @@ SET(TARGET1_SRC
 SET(TARGET2_SRC
   source/DG_advection_reaction_embedded.cc
   main_embedded.cc
+)
+
+set(TARGET3_SRC
+  source/blood-flow-system-1d3d.cc
+  main_1d3d.cc
 )
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.13.4)
@@ -65,3 +71,7 @@ DEAL_II_SETUP_TARGET(${TARGET1})
 # Create second executable target  
 ADD_EXECUTABLE(${TARGET2} ${TARGET2_SRC})
 DEAL_II_SETUP_TARGET(${TARGET2})
+
+# Create third executable target
+ADD_EXECUTABLE(${TARGET3} ${TARGET3_SRC})
+DEAL_II_SETUP_TARGET(${TARGET3})
