--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,3 +66,6 @@ DEAL_II_SETUP_TARGET(${TARGET1})
 ADD_EXECUTABLE(${TARGET2} ${TARGET2_SRC})
 DEAL_II_SETUP_TARGET(${TARGET2})
 
+# Add tests
+ADD_SUBDIRECTORY(tests)
+ENABLE_TESTING()
